<resources>
    <!--contentDescriptions-->
    <string name="desc_edit_email">Campo para inserir o endereço de e-mail</string>
    <string name="desc_edit_password">Campo para inserir a senha</string>
    <string name="desc_btn_entrar">Botão para entrar na conta</string>
    <string name="desc_btn_loginGoogle">Botão para entrar com a conta do Google</string>
    <string name="desc_txt_forgotPass">Link para recuperar a senha esquecida</string>
    <string name="desc_txt_tela_cadastro">Link para criar uma nova conta</string>

    <!--strings-->
    <string name="app_name">project_SICORE</string>
    <string name="sicore">SICORE</string>
    <string name="realizar_login">Realizar login</string>
    <string name="endereco_de_email">Endereço de e-mail</string>
    <string name="senha">Senha</string>
    <string name="esqueceu_sua_senha">Esqueceu sua senha?</string>
    <string name="entrar">Entrar</string>
    <string name="ou">OU</string>
    <string name="entrar_com_o_google">Entrar com o Google</string>
    <string name="ainda_nao_possui_uma_conta_cadastrar_se">Ainda não possui uma conta? Cadastrar-se</string>
    <string name="etapa_1">Etapa 1</string>
    <string name="criar_conta">Criar conta</string>
    <string name="nome_de_usuario">Nome de usuário</string>
    <string name="cpf_cnpj">CPF/CNPJ</string>
    <string name="numero_de_telefone">Número de telefone</string>
    <string name="proximo">Próximo</string>
    <string name="ja_possui_uma_conta_login">Já possui uma conta? Login</string>
    <string name="etapa_2">Etapa 2</string>
    <string name="confirme_sua_senha">Confirme sua senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="voltar">Voltar</string>
    <string name="enviar">Enviar</string>
    <string name="info_forgot_pass">Por favor, forneça o e-mail vinculado à conta para enviarmos um código de recuperação.</string>
    <string name="codigo_de_recuperacao">Código de recuperação</string>
    <string name="info_recovery_code">Enviamos um código de 4 dígitos para o endereço fornecido anteriormente.\n\nPor favor, insira-o para prosseguir.</string>
    <string name="redefinir_senha">Redefinir senha</string>
    <string name="info_redefine_password">Insira a sua nova senha para que possamos recuperar sua conta.</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="data_de_nascimento">Data de nascimento</string>
    <string name="confirme_seu_email">Confirme seu e-mail</string>
    <string name="etapa_3">Etapa 3</string>
    <string name="cep">CEP</string>
    <string name="pais">País</string>
    <string name="estado">Estado</string>
    <string name="cidade">Cidade</string>
    <string name="bairro">Bairro</string>
    <string name="rua">Rua</string>
    <string name="bem_vindo_ao_sicore">Bem vindo ao SICORE</string>
    <string name="estamos_preparando_o_aplicativo">Estamos preparando o aplicativo para você</string>
    <string name="escolha_seu_tipo_de_usuario">Escolha seu tipo de usuário</string>
    <string name="cooperativa">Cooperativa</string>
    <string name="catador">Catador</string>
    <string name="depositante">Depositante</string>
    <string name="esta_com_duvida_deixenos_ajudar">Está com dúvida? Deixe-nos ajudar</string>
</resources>