<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BackgroundColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context=".activity.FormCadastro2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/txt_etapa3"
            style="@style/TextView.SmallText"
            android:layout_width="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/etapa_3"
            android:textAlignment="textStart"
            app:layout_constraintRight_toLeftOf="@id/txt_sicore"
            app:layout_constraintStart_toStartOf="@id/edit_rua"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/indicador_etapas"
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="48dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_etapa3"
            app:layout_constraintWidth_max="296dp">

            <View
                android:id="@+id/step1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_square" />

            <View
                android:id="@+id/step2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_square" />

            <View
                android:id="@+id/step3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_square" />
        </LinearLayout>

        <TextView
            android:id="@+id/txt_sicore"
            style="@style/TextView.BigTitle"
            android:layout_marginTop="72dp"
            android:text="@string/sicore"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/indicador_etapas"
            app:layout_constraintWidth_max="296dp" />

        <TextView
            android:id="@+id/txt_titleCriarConta"
            style="@style/TextView.Title"
            android:layout_marginTop="72dp"
            android:text="@string/criar_conta"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_sicore"
            app:layout_constraintWidth_max="296dp" />

        <LinearLayout
            android:id="@+id/container_endereco"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="48dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_titleCriarConta"
            app:layout_constraintWidth_max="296dp">

            <EditText
                android:id="@+id/edit_cep"
                style="@style/Base.EditText"
                android:layout_weight="1"
                android:autoLink="email"
                android:autofillHints=""
                android:hint="@string/cep"
                android:inputType="number" />

            <View
                android:layout_width="20dp"
                android:layout_height="1dp" />

            <EditText
                android:id="@+id/edit_pais"
                style="@style/Base.EditText"
                android:layout_weight="0.7"
                android:autoLink="email"
                android:autofillHints=""
                android:hint="@string/pais"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_endereco1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="48dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/container_endereco"
            app:layout_constraintWidth_max="296dp">

            <EditText
                android:id="@+id/edit_cidade"
                style="@style/Base.EditText"
                android:layout_weight="1"
                android:autofillHints=""
                android:hint="@string/cidade"
                android:inputType="text" />

            <View
                android:layout_width="20dp"
                android:layout_height="1dp" />

            <EditText
                android:id="@+id/edit_estado"
                style="@style/Base.EditText"
                android:layout_weight="0.7"
                android:autofillHints=""
                android:hint="@string/estado"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_endereco2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="48dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/container_endereco1"
            app:layout_constraintWidth_max="296dp">


            <EditText
                android:id="@+id/edit_bairro"
                style="@style/Base.EditText"
                android:layout_weight="1.0"
                android:autofillHints=""
                android:hint="@string/bairro"
                android:inputType="text" />

            <View
                android:layout_width="20dp"
                android:layout_height="1dp" />

            <EditText
                android:id="@+id/edit_numero"
                style="@style/Base.EditText"
                android:layout_weight="0.7"
                android:autofillHints=""
                android:hint="@string/numero"
                android:inputType="number" />

        </LinearLayout>

        <EditText
            android:id="@+id/edit_rua"
            style="@style/Base.EditText"
            android:layout_marginStart="48dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="48dp"
            android:autofillHints=""
            android:hint="@string/rua"
            android:inputType="text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/container_endereco2"
            app:layout_constraintWidth_max="296dp" />

        <LinearLayout
            android:id="@+id/container_botoes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="48dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_rua"
            app:layout_constraintWidth_max="296dp">

            <Button
                android:id="@+id/btn_voltar"
                style="@style/BaseButton"
                android:layout_weight="1"
                android:text="@string/voltar" />

            <View
                android:layout_width="20dp"
                android:layout_height="1dp" />

            <Button
                android:id="@+id/btn_cadastrar"
                style="@style/BaseButton"
                android:layout_weight="1"
                android:backgroundTint="@color/primaryColorVariant"
                android:text="@string/cadastrar" />

        </LinearLayout>

        <TextView
            android:id="@+id/txt_tela_login"
            style="@style/TextView.SmallText"
            android:layout_marginStart="48dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="8dp"
            android:text="@string/ja_possui_uma_conta_login"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/container_botoes"
            app:layout_constraintWidth_max="296dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>