<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BackgroundColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context=".activity.UserTypeScreen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/txt_sicore"
            style="@style/TextView.BigTitle"
            android:layout_marginTop="96dp"
            android:text="@string/sicore"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_max="296dp" />

        <TextView
            android:id="@+id/txt_escolher_conta"
            style="@style/TextView.Title"
            android:layout_marginTop="144dp"
            android:text="@string/escolha_seu_tipo_de_usuario"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_sicore"
            app:layout_constraintWidth_max="296dp" />

        <LinearLayout
            android:id="@+id/container_usuarios"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_escolher_conta"
            app:layout_constraintWidth_max="296dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/btn_cooperativa"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:backgroundTint="@color/primaryColor"
                    android:contentDescription="@string/cooperativa"
                    android:src="@drawable/ic_launcher_foreground" />

                <TextView
                    android:id="@+id/txt_cooperativa"
                    style="@style/Base.TextView"
                    android:layout_width="wrap_content"
                    android:text="@string/cooperativa" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/btn_catador"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:backgroundTint="@color/primaryColor"
                    android:contentDescription="@string/catador"
                    android:src="@drawable/ic_launcher_foreground" />

                <TextView
                    android:id="@+id/txt_catador"
                    style="@style/Base.TextView"
                    android:layout_width="wrap_content"
                    android:text="@string/catador" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/btn_depositante"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:backgroundTint="@color/primaryColor"
                    android:contentDescription="@string/depositante"
                    android:src="@drawable/ic_launcher_foreground" />

                <TextView
                    android:id="@+id/txt_depositante"
                    style="@style/Base.TextView"
                    android:layout_width="wrap_content"
                    android:text="@string/depositante" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/txt_peca_ajuda"
            style="@style/TextView.SmallText"
            android:layout_marginTop="96dp"
            android:text="@string/esta_com_duvida_deixenos_ajudar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container_usuarios"
            app:layout_constraintWidth_max="296dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>